XWIKI-20953: Edit autosave frequency visibility * Fixed internal references to interval

--- a/xwiki-platform-core/xwiki-platform-web/xwiki-platform-web-war/src/main/webapp/resources/js/xwiki/editors/autosave.css
+++ b/xwiki-platform-core/xwiki-platform-web/xwiki-platform-web-war/src/main/webapp/resources/js/xwiki/editors/autosave.css
@@ -3,16 +3,16 @@
   white-space: nowrap;
 }
 
-#autosaveControl .interval {
+#autosaveControl .frequency {
   display: none;
   margin-left: 2em;
   
-  & .autosave-interval {
+  & .autosave-frequency {
     width: 3em;
     margin-left: 1em;
   }
 }
 
-#autosaveControl .autosave:has(input:checked) + .interval {
+#autosaveControl .autosave:has(input:checked) + .frequency {
   display: inline-block;
 }
